@@ -1,3 +1,4 @@
+1-14-09: refactor code that accesses the sim-version-info service
 1-14-09: #1095, add developer control to always show software agreement
 1-13-09: #1095, added dialog that handles negotiation of software and privacy agreements
 1-13-09: #1095, added privacy.agreement.version property to preference file API
